# Hackathon-2

./: .gitignore  CLAUDE.md  CONNECTION_SUMMARY.md  DEPLOYMENT_COMPLETION_CONFIRMATION.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TEST_PLAN.md  HELM-README.md  PROJECT_REVIEW.md  README.md  build-images.bat  build-images.sh  deploy-monitoring.sh  deploy.bat  deploy.sh  health-check.ps1  health-check.sh  production-values.yaml  temp-frontend.Dockerfile  temp-kubeconfig.yaml  test-deployment.bat  test-deployment.sh
.claude/agents/: architecture-planner.md  docker-testing-agent.md  fastapi-backend-engineer.md  frontend-engineer-nextjs.md  integration-test-agent.md  (+2 more)
backend/: FINAL_STATUS_REPORT.md  alembic.ini  check_db.py  database_interaction_demo.py  db_check.py  db_verify.py  final_verification.py  integration_test.py  neon_db_test.py  pyproject.toml  real_time_data_flow_test.py  real_time_demo.py  requirements.txt  simple_verification.py  status_report.py  test_db.py
backend/alembic/: env.py
backend/src/: main.py
backend/src/api/: routes.py
backend/src/auth/: jwt_handler.py  middleware.py  routes.py
backend/src/models/: database.py  entities.py
backend/src/services/: task_service.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ai-prompts-reference.md  quickstart-validation.md  troubleshooting.md
frontend/: README.md  next.config.js  tailwind.config.js  tsconfig.tsbuildinfo
monitoring/: grafana.yaml  logging-efk.yaml  prometheus.yaml
scripts/: deploy.ps1  monitor.ps1  scale.ps1
temp-build-frontend/: frontend.Dockerfile  package.json
(+127 files in other folders)
